<resources>
    <string name="app_name">Gym helper</string>
    <string name="programs">Программы</string>
    <string name="profiles">Профили</string>
    <string name="addDay">Добавить день</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dayName">Введите название дня</string>
    <string name="groupLabel">Группа</string>
    <string name="subgroup">Подгруппа</string>
    <string name="level">Уровень</string>
    <string name="zhimLezhaDescription">Лягте на силовую скамью. Возьмите штангу так, чтобы ширина хвата была на 8-10 см больше ширины плеч.
        На вдохе - медленно опускайте гриф до тех пор, пока не коснетесь штангой нижней части груди. На выдохе - используя грудные мышцы,
        плавно выполните подъем штанги к исходному положению. В верхней точке упражнения зафиксируйте штангу на несколько секунд.</string>
    <string name="stanTyagaDescription">Встаньте вплотную к грифу штанги, ноги немного уже плеч. Присядьте и возьмите штангу хватом сверху. Плечи должны находиться ровно над грифом штанги.
        Спину держите ровно. На выдохе - тяните штангу вверх, выпрямляя тело. Грифом штанги скользите вдоль ног.Полностью выпрямитесь, при этом сведите лопатки вместе.На вдохе
    - начните движение в обратном направлении. При этом сначала отведите таз назад. Скользите грифом вдоль тела, сгибая спину. После того, как пройдете колени, начните сгибать ноги,
        держа при этом спину прямо. Коснитесь штангой пола.</string>
    <string name="zhimLezhaNaklSkDescription">Выберите угол наклона скамьи (оптимальный 30 градусов). Лягте на наклонную скамью, закрепив ноги за опорные валики.Исходное
    положение: возьмите гриф хватом немного уже, чем в классическом жиме и поднимите его над грудью. Это позволит увеличить амплитуду движения и сокращение грудных мышц.
        На вдохе – плавно опускайте штангу вниз до тех пор, пока гриф не коснется груди.На выдохе – сделайте небольшую паузу и поднимите штангу в исходное положение</string>
    <string name="avstralPodtyagDescription">Исходное положение- встать под перекладину (она должна находиться на уровне груди), вытянуть ноги вперед, крепко ухватиться за перекладину руками.
При этом пятками необходимо упереться в пол, чтобы избежать скольжения. Корпус выпрямить.На выдохе подтяните силой рук туловище вверх,  до касания перекладины грудью. При подъеме торс подать вперед, поясницу
    прогнуть, плечи отстранить назад.В верхней точке свести лопатки, задержаться несколько секунд в этом положении.Плавно (медленнее, чем при подъёме) вернуться в исходное положение (с выпрямленными руками)</string>
    <string name="prisedSoShtDescription">Возьмите штангу и положите её на плечи. Исходное положение - встаньте в комфортную позицию для прыжка. Если представить,  что сейчас прыгнешь вперед, то ноги возьмут ту ширину и изгиб
    оптимальный для приседаний.На вдохе – плавно опускайтесь вниз. На выдохе – вернитесь в исходное положение. Не разгибайте полостью колени,
        оставляйте их чуть согнутыми, контролируйте напряжение</string>
    <string name="zashagNaSkamuDescription">Исходное положение – встаньте с утяжелением (гантели или штанга) перед скамьей или платформой.Поставьте правую ногу на скамью.
        На выдохе - опираясь на пятку правой ноги и переместив на нее центр тяжести, поднимите тело и поставьте левую ногу на скамью. На вдохе - медленно опустите левую ногу на пол.
        Повторите защагивания с опорой на правую ногу необходимое число раз, затем сделайте упражнение с опорой на левую ногу</string>
    <string name="zhimLezhaGantDescription">Возьмите гантели в каждую руку, сядьте с ними на горизонтальную силовую скамью. Положите гантели на бедра и после
		 этого лягте на скамью.Исходное положение: спина прогнута в пояснице, стопы ног упираются в пол. Руки с гантелями находятся на уровне плечей, грифы гантелей расположены на одной линии.
		 На выдохе – поднимите руки вверх, немного сводя гантели, максимально сокращая грудную мышцу.На выдохе – вернитесь в исходное положение, максимально растягивая грудь</string>
    <string name="zhimRychazhTrenDescription">Установите на рычажном тренажере необходимый вес и настройте сидение исходя из своего роста. Рукояти тренажера необходимо зафиксировать на уровне
		верхней части Вашей груди.Исходное положение: голова и грудь устремите в направлении вверх, а лопатки сведите друг к другу. При помощи специальной педали поднимите вес в верхнюю позицию.
		На вдохе – Плавно опускайте рукояти тренажера до тех пор, пока локти не будут согнуты до угла в 90 градусов.На выдохе – мощным усилием сделайте жим, вернувшись к исходному положению</string>
    <string name="zhimGolovoiVnizDescription">Отрегулируйте наклон скамьи под нужным углом. Закрепите ноги за опорные валики.Исходное положение – прямой хват, руки на ширине плеч, поднимите штангу со стоек.
		Удерживайте гриф штанги прямо над низом грудных мышц. Руки перпендикулярны полу.На вдохе - медленно опускайте штангу вниз. Продолжайте опускать до тех пор, пока штанга не коснется груди.
		На выдохе – верните штангу в исходное положение</string>
    <string name="otzhimVPetlyahDescription">Выровняйте петли, чтоб оба конца были ровны.Возьмитесь за рукояти, пройдите вперед до полного натяжения лямок.Переместите вес тела на петли,в зависимости от
		постановки ног можно варьировать нагрузку, чем дальше поставить ноги за крепление, тем самым сократить угол между телом и полом, то выполнение упражнения усложниться.
		Медленно сгибая руки в локтях, опуститесь вниз как при отжиманиях от пола. Опускайтесь до тех пор, пока угол в локтевом суставе составит 90 градусов.
		Ладони не меняют своего положения (положение ладони обращены к себе).Поднимаемся вверх до полного выпрямления рук, а так же руки сводятся друг к другу как при жиме гантелями на скамье</string>
    <string name="otzhimNaBrusDescription">Исходное положение – на брусьях удерживайте тело на вытянутых руках. На вдохе - опуститесь вниз. Тело держите прямо, локти как можно ближе к телу.
		В нижней точке руки должны быть согнуты в локтях под прямым углом.На выдохе - усилием трицепса вернитесь в исходное положение</string>
    <string name="otzhimOtPolaDescription">Лягте на пол. Примите упор лежа, удерживая тело на выпрямленных руках.Исходное положение – руки немного шире плеч, ладони на одном уровне с плечами.
		На вдохе - сохраняя тело прямым, сгибайте руки, пока грудью не коснетесь пола. На выдохе – вернитесь в исходное положение</string>
    <string name="puloverDescription">Лягте спиной на скамью (затылок на краю скамьи). Ноги согните в коленях.Возьмите гантель двумя руками таким образом, чтобы гриф был зажат между большими
		пальцами рук, а другие пальцы обхватывали диски гантели и зафиксируйте её над грудью на прямых вытянутых руках. Руки выпрямлены перпендикулярно телу.На вдохе – не сгибая руки в локтях,
		медленно опускайте гантель за голову - чуть ниже горизонтального положения.На выдохе - поднимите гантель в исходную позицию и задержитесь на секунду</string>
    <string name="razvedRukSGantDescription">Для безопасного и правильного выполнения разведения рук с гантелями необходимо отрегулировать высоту скамьи так, чтобы ступнями вы надежно
		упирались в пол, для избежания потери равновесия.Держа гантели в руках, лягте на скамью, ноги уприте в пол.Исходное положение: поднимите гантели вверх. Руки немного согнуты в локтях. Угол
		в локтевом суставе необходимо зафиксировать и держать неизменным во время выполнения упражнения.На вдохе – по широкой дуге разведите руки в стороны только за счет плечевого сустава. Опускайте
		гантели до уровня плеч или немного ниже.На выдохе – усилием мышц груди сведите гантели над собой по обратной траектории</string>
    <string name="svedRukVCrossoverDescription">Выставьте на блоках тросового тренажера необходимый вес, возьмите рукоятки троса в каждую руку. Встаньте строго по центру конструкции.
		Исходное положение: сделайте шаг и немного наклонитесь вперед. Разведите руки в стороны максимально растягивая грудные мышцы. Локти немного согнуты.
		На выдохе - по широкой дуге тяните рукояти к центру туловища. Следите, чтобы движение происходило только за счет плечевого сустава, руки и туловище должны быть неподвижны на протяжении
		всего упражнения.На вдохе - медленно вернитесь по в исходное положение до легкого растяжения в пекторальных</string>
    <string name="babochkaDescription">Сядьте на сиденье тренажера, обхватите рукоятки тренажера.Исходное положение – поясницу и спину прижмите к его спинке, лопатки соедините.
		На выдохе – двигайте руки вперед, за счет усилия грудных мышц, пока не соедините руки перед собой. Остановитесь в этом положении на несколько секунд.
		На вдохе - верните руки в исходное положение</string>
    <string name="tOtzhimSPetlDescription">Выровняйте петли, чтоб оба конца были ровны. Возьмитесь за рукояти, пройдите вперед до полного натяжения лямок.
		Ладони обращены друг к другу, руки чуть согнуты в локтях.Отводим руки в стороны, равномерно распределяя вес тела на обе руки, опускаемся до комфортного растяжения грудных мышц.
		Плавным движением возвращаем руки в исходное положение</string>
    <string name="concSgibBicepsDescription">Сядьте на край скамьи, расставив ноги так, чтобы руки свободно могли выполнять подъем гантели. Исходное положение:
		Правой рукой возьмите гантель нейтральным хватом, упираясь локтем в верхнюю область бедра. Ладони должны смотреть от Вас, а руки выпрямлены. На выдохе – сделайте подъем гантели на бицепс,
		работая исключительно предплечьем. Выполняйте сгибание до тех пор, пока бицепс полностью не сократиться, а снаряд не будет у Ваших плеч.
		Задержитесь в верхней точке для максимальной эффективности. На вдохе – плавно опустите гантель, вернувшись в исходное положение. Выполните необходимое количество сгибаний для обеих рук</string>
    <string name="molotokDescription">Возьмите гантели с нужным весом в каждую руку. Встаньте прямо. Исходное положение: руки опущены вниз, ладони внутрь, локти прижаты к туловищу, спина прямая.
		На выдохе – сгибайте руку в локте, усилием бицепса поднимая гантели. Поднимайте гантель максимально высоко, до полного сокращения бицепса (примерно на уровне плеча).
		Руки от плеча до локтя должны быть неподвижны. На вдохе - верните гантели в исходное положение</string>
    <string name="sgibRukVerhBlockDescription">Установите подходящий Вам вес (одинаковый) с двух сторон тросового тренажера. Настройте тросы так, чтобы рукояти были выше Ваших плеч.
		Займите центральное положение в раме и возьмите рукояти таким хватом, чтобы ладони были направлены в сторону потолка. Исходное положение: поставьте ноги на ширине плеч, а тело держите на одной прямой с рукоятями.
		На выдохе – держа туловище неподвижно, плавно сгибайте руки до тех пор, пока предплечье не дотронется до бицепса. На вдохе – распрямите руки в локте</string>
    <string name="sgibRukNizhBlockDescription">Исходное положение: возьмитесь за рукоятку, прикрепленную к тросу нижнего блока, нижним хватом. Встаньте прямо, слегка отклонитесь назад.
		Локти прижмите к корпусу. Ноги на ширине плеч.На выдохе – сгибайте предплечья до полного сокращения бицепса. Следите, чтобы локти не уходили вперед, а корпус не раскачивался.
		На вдохе – вернитесь в исходное положение</string>
    <string name="fragment_program_view">Gym helper</string>
    <string name="fragment_programs_list">Тренировочные программы</string>
	<string name="fragment_program_edit">Редактор программы</string>
	<string name="fragment_excersizes_list">Выбор упражнений</string>
	<string name="fragment_profiles_list">Тренировочные профили</string>
	<string name="fragment_profile_edit">Редактирование профиля</string>
	<string name="fragment_excersize_view">Просмотр упражнения</string>
	<string name="ExcersizeVariantsFragment">Аналоги упражнения</string>
</resources>